LIN-3512/LIN-3753 :: Fix width of nested components
Change-Id: I9c6f10eeec6c5994deaa459f6b49ce70b8c43615
(cherry picked from commit 575f8816a962c8bd9ea82279936919e00e10c48d)